--- a/PMCTool.App/Views/GlobalStatus/_PartialTableGlobalStatusDetail.cshtml
+++ b/PMCTool.App/Views/GlobalStatus/_PartialTableGlobalStatusDetail.cshtml
@@ -35,23 +35,23 @@
                         <td class="text-center">
                             @if (@item.Status == 1)
                             {
-                                <span class="st-entiempo">En tiempo</span>
+                                <span class="ws st-entiempo">En tiempo</span>
                             }
                             @if (@item.Status == 2)
                             {
-                                <span class="st-atrasado">Atrasado</span>
+                                <span class="ws st-atrasado">Atrasado</span>
                             }
                             @if (@item.Status == 3)
                             {
-                                <span class="st-cimpacto">Con impacto</span>
+                                <span class="ws st-cimpacto">Con impacto</span>
                             }
                             @if (@item.Status == 4)
                             {
-                                <span class="st-cerrado">Cerrado</span>
+                                <span class="ws st-cerrado">Cerrado</span>
                             }
                             @if (@item.Status == 5)
                             {
-                                <span class="st-cancelado">Cancelado</span>
+                                <span class="ws st-cancelado">Cancelado</span>
                             }
                         </td>
                         @{
