--- a/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
@@ -137,7 +137,7 @@
                                                                     }
                                                             }
                                                         <td>@r.PlannedEndDate</td>
-                                                        <td>@r.ResponsibleApprovalName</td>
+                                                        <td>@r.CompanyName</td>
                                                         <td>@r.Comment</td>
                                                      </tr>
                                                     }
