#875 - MaquetadoV1.1 Analytics SCT: Agregar opción Por Definir al filtro Tipo de Proyecto

--- a/PMCTool.App/Views/ProjectsLocations/Index.cshtml
+++ b/PMCTool.App/Views/ProjectsLocations/Index.cshtml
@@ -35,8 +35,13 @@
                                     </div>
                                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                         <select multiple name="TipoP" id="TipoProyecto" class="selectpicker" data-title="Tipo de proyecto" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                            <option value="1">Compromisos del presidente</option>
-                                            <option value="2">Conectividad AIFA</option>
+                                            <option value="1">Infraestructura para el bienestar</option>
+                                            <option value="2">Reactivación Económica</option>
+                                            <option value="3">Accesorio</option>
+                                            <option value="4">Territorio Yaqui</option>
+                                            <option value="5">Compromisos de presiones sociales</option>
+                                            <option value="6">Obras de compromiso sectorial</option>
+                                            <option value="7">Por Definir</option>
                                         </select>
                                     </div>
                                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
