--- a/PMCTool.App/Views/ProjectsLocations/Index.cshtml
+++ b/PMCTool.App/Views/ProjectsLocations/Index.cshtml
@@ -26,11 +26,12 @@
                                     </div>
                                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                         <select multiple name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                            <option value="ARTF">ARTF</option>
+                                            <option value="ARTF">Agencia Reguladora de Transporte Ferroviario</option>
                                             <option value="DGC">DG Carretera</option>
                                             <option value="DGCC">DG Conservación de Carreteras</option>
                                             <option value="DGDC">DG Desarrollo carretero</option>
                                             <option value="DGTFM">DG Transporte Ferroviario y Multimodal</option>
+                                            <option value="Otros">Otros</option>
                                         </select>
                                     </div>
                                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
