--- a/PMCTool.App/Views/GlobalStatus/Index.cshtml
+++ b/PMCTool.App/Views/GlobalStatus/Index.cshtml
@@ -29,6 +29,7 @@
                                         <option value="DGCC">DG Conservación de Carreteras</option>
                                         <option value="DGDC">DG Desarrollo carretero</option>
                                         <option value="DGTFM">DG Transporte Ferroviario y Multimodal</option>
+                                        <option value="Otros">Otros</option>
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
