#877 - MaquetadoV1.1 ANALYTICS SCT > INVERSIÓN ACUMULADA > Corrección de etiqueta

--- a/PMCTool.App/Views/AccumulatedInvestment/_PartialChart.cshtml
+++ b/PMCTool.App/Views/AccumulatedInvestment/_PartialChart.cshtml
@@ -4,7 +4,7 @@
     <div id="inversion"></div>
     <div class="col-12 center">
         <text class="font-weight-bold">
-            <span style="background-color: #235b4e; color: white">Inversión Acumulada Real = $ @Model.TotalInvestmentReal.ToString("C2")  mdp</span>, <span style="background-color: #800000; color: white;">Inversión Acumulada Planeada = $ @Model.TotalInvestmentPlanned.ToString("C2") mdp</span>,
+            <span style="background-color: #235b4e; color: white">Inversión Acumulada Real =  @Model.TotalInvestmentReal.ToString("C2")  mdp</span>, <span style="background-color: #800000; color: white;">Inversión Acumulada Planeada =  @Model.TotalInvestmentPlanned.ToString("C2") mdp</span>,
         </text>
         <text class="font-weight-bold">
             @Model.TotalProjects proyectos.
