#888 - Analytics SCT: Agregar opciones al filtro Anuncio

--- a/PMCTool.App/Views/GlobalStatus/Index.cshtml
+++ b/PMCTool.App/Views/GlobalStatus/Index.cshtml
@@ -61,9 +61,13 @@
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                     <select multiple name="Anuncio" id="Anuncio" class="selectpicker" data-title="Anuncio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                        <option value="1">1er Anuncio</option>
-                                        <option value="2">2do Anuncio</option>
-                                        <option value="3">No Aplica</option>
+                                        <option value="1">Plurianualidades</option>
+                                        <option value="2">Tercer Anuncio</option>
+                                        <option value="3">Primer Anuncio</option>
+                                        <option value="4">Segundo Anuncio</option>
+                                        <option value="5">Autopista Mitla - Tehuantepec II</option>
+                                        <option value="6">Autopista Barranca Larga - Ventanilla</option>
+                                        <option value="7">No Aplica</option>
                                     </select>
                                 </div>
                                 <div class="col-12 mt-1 col-sm-4 col-md-4 col-lg-4 col-xl-4">
