#870 - MaquetadoV1.1 ANALYTICS > BANBIEN > FICHA DE PROYECTOS

--- a/PMCTool.App/Views/FactSheet/IndexReport.cshtml
+++ b/PMCTool.App/Views/FactSheet/IndexReport.cshtml
@@ -65,7 +65,7 @@
                                                             <div class="col-12 mt-1">
                                                                 <h6><strong>Localidad:</strong> <span id="localidad">@Locality</span></h6>
                                                             </div>
-                                                             <div class="col-md-12 mt-1"> <h6><strong>Intitución que administra el inmueble:</strong> <span id="institucion">@Institution</span></h6> </div>
+                                                             <div class="col-md-12 mt-1"> <h6><strong>Institución que administra el inmueble:</strong> <span id="institucion">@Institution</span></h6> </div>
                                                             <div class="col-md-12 mt-1"> <h6><strong>Tipo de predio:</strong> <span id="tipoPredio">@Venue</span></h6> </div>
                                                             <div class="col-md-12 mt-1"> <h6><strong>Categoria de predio:</strong> <span id="categoriaPredio">@CategoryVenue</span></h6> </div>
                                                         </div>
