--- a/PMCTool.App/Views/FactSheet/Index.cshtml
+++ b/PMCTool.App/Views/FactSheet/Index.cshtml
@@ -86,7 +86,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="row mt-3">
-                                                    <div class="col-md-12 mt-1"> <h6>Intitución que administra el inmueble: <span id="institucion"></span></h6> </div>
+                                                    <div class="col-md-12 mt-1"> <h6>Institución que administra el inmueble: <span id="institucion"></span></h6> </div>
                                                     <div class="col-md-12 mt-1"> <h6>Tipo de predio: <span id="tipoPredio"></span></h6> </div>
                                                     <div class="col-md-12 mt-1"> <h6>Categoria de predio: <span id="categoriaPredio"></span></h6> </div>
                                                 </div>
