#880 - MaquetadoV1.1 ANALYTICS SCT > FICHA DE PROYECTO > Incidente sin plan

--- a/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
@@ -191,9 +191,12 @@
                                                         <td>@b.PlannedEndDate</td>
                                                         <td>
                                                         @{
-                                                                string comment =  @b.ActionPlan;
-                                                                    comment = comment.Replace("|", "<br>"); 
-                                                            } 
+                                                            string comment =  @b.ActionPlan;
+                                                            if(comment != null)
+                                                            {
+                                                                comment = comment.Replace("|", "<br>");
+                                                            }
+                                                        } 
 
                                                              @Html.Raw(@comment)
                                                         </td>
