--- a/PMCTool.App/Views/BranchAdvances/Index.cshtml
+++ b/PMCTool.App/Views/BranchAdvances/Index.cshtml
@@ -35,20 +35,18 @@
                                         </select>
                                     </div>
                                     <div class="ml-2">
-                                        <select multiple name="tipopredio" class="selectpicker" id="tipopredio" data-title="Tipo de predio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
-                                                <option value="1">MUNICIPAL</option>
-                                                <option value="2">FEDERAL</option>
-                                                <option value="3">PROPIEDAD SOCIAL</option>
-                                                <option value="4">PARTICULAR</option>
+                                        <select multiple name="tipopredio" class="selectpicker" id="tipopredio" data-title="Clasificación" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
+                                                <option value="5">Prioritarias 500</option>
+                                                <option value="6">Bloque 2022</option> 
                                         </select>
                                     </div>
                                     
-                                    <div class="ml-2">
+                                    @*<div class="ml-2">
                                         <select name="tipovista" id="tipovista" class="selectpicker" data-title="Vista" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
                                                 <option value="default" selected>Default</option>
                                                 <option value="porcentaje">Porcentaje</option> 
                                         </select>
-                                    </div>
+                                    </div>*@
                                     <div class="mt-1 ml-2">
                                         <div>
                                             <button type="button" class="btn btn-wd btn-default btn-default" id="BAbntReport">
