#915 V5.0.1.2 ANALYTICS BANBIEN > AVANCE DE SUCURSAL > ENCABEZADO

--- a/PMCTool.App/Views/BranchAdvances/_ParcialTableDefaultIndexReport.cshtml
+++ b/PMCTool.App/Views/BranchAdvances/_ParcialTableDefaultIndexReport.cshtml
@@ -14,7 +14,7 @@
                                                         <th  class="text-center" style="color:white; font-size: 1em;">Legal</th>
                                                         <th  class="text-center" style="color:white; font-size: 1em;">Recursos Humanos</th>
                                                         <th  class="text-center" style="color:white; font-size: 1em;">Tecnología</th>
-                                                        <th  class="text-center" style="color:white; font-size: 1em;" >Pre prueba</th> 
+                                                        <th class="text-center" style="color:white; font-size: 1em;">Puesta en marcha</th> 
                                                     </tr>
                                                 </thead> 
                                         <tbody>
