--- a/PMCTool.App/Views/BranchAdvances/_ParcialTablePercentageIndex.cshtml
+++ b/PMCTool.App/Views/BranchAdvances/_ParcialTablePercentageIndex.cshtml
@@ -11,7 +11,7 @@
                                                         <th  class="text-center">Legal</th>
                                                         <th  class="text-center">Recursos Humanos</th>
                                                         <th  class="text-center">Tecnología</th>
-                                                        <th  class="text-center">Pre prueba</th>  
+                                                        <th class="text-center">Puesta en marcha</th>  
                                                     </tr>
                                                 </thead> 
                                         <tbody>
