#914 - V5.1.0.12 ANALYTICS BANBIEN > REPORTE UBICACIÓN

--- a/PMCTool.App/Views/BranchLocations/Index.cshtml
+++ b/PMCTool.App/Views/BranchLocations/Index.cshtml
@@ -26,12 +26,9 @@
                                 </select>
                             </div>
                             <div class="ml-2">
-                                <select multiple id="predio" name="predio" class="selectpicker" data-title="Tipo de predio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
-                                    <option value="FEDERAL">FEDERAL</option>
-                                    <option value="MUNICIPAL">MUNICIPAL</option>
-                                    <option value="PARTICULAR">PARTICULAR</option>
-                                    <option value="PROPIEDAD SOCIAL">PROPIEDAD SOCIAL</option>
-
+                                <select multiple id="predio" name="predio" class="selectpicker" data-title="Clasificación" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
+                                    <option value="Prioritarias 500">Prioritarias 500</option>
+                                    <option value="Bloque 2022">Bloque 2022</option>
                                 </select>
                             </div>
                             <div class="ml-2 mt-1">
