--- a/PMCTool.App/wwwroot/css/progress-circle.css
+++ b/PMCTool.App/wwwroot/css/progress-circle.css
@@ -17,8 +17,11 @@ h1 {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  /*
   -webkit-animation: colorload 2s;
-  animation: colorload 2s; }
+  animation: colorload 2s; */
+
+}
 
 .progress-circle span {
   font-size: 1.5rem;
@@ -1685,12 +1688,14 @@ background-image: linear-gradient(86.4deg, #0e0e0e 50%, transparent 50%, transpa
 .progress-circle.progress-Canceled-100:after {
 background-image: linear-gradient(90deg, #0e0e0e 50%, transparent 50%, transparent), linear-gradient(270deg, #0e0e0e 50%, #ebebeb 50%, #ebebeb);
 }
-@-webkit-keyframes colorload {
+/*@-webkit-keyframes colorload {
   0% {
     opacity: 0;
     transform: rotate(0deg); }
   100% {
     opacity: 1;
-    transform: rotate(360deg); } }
+    transform: rotate(360deg); }
+
+}*/
 
 /*# sourceMappingURL=progress-circle.css.map */
