--- a/PMCTool.App/Views/GlobalStatus/Index.cshtml
+++ b/PMCTool.App/Views/GlobalStatus/Index.cshtml
@@ -67,7 +67,8 @@
                                         <option value="4">Segundo Anuncio</option>
                                         <option value="5">Autopista Mitla - Tehuantepec II</option>
                                         <option value="6">Autopista Barranca Larga - Ventanilla</option>
-                                        <option value="7">No Aplica</option>
+                                        <option value="7">AIFA</option>
+                                        <option value="8">No Aplica</option>
                                     </select>
                                 </div>
                                 <div class="col-12 mt-1 col-sm-4 col-md-4 col-lg-4 col-xl-4">
