--- a/PMCTool.App/Views/ActionsToMake/Index.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index.cshtml
@@ -21,40 +21,7 @@
                             <div class="col-12">
                                 <div class="row">
                                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                        <select name="Entidad" id="Entidad" class="selectpicker" data-title="Entidad Federativa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple data-live-search="true" data-actions-box="true">
-                                            <option value="1">Aguascalientes</option>
-                                            <option value="2">Baja California</option>
-                                            <option value="3"> Baja California Sur</option>
-                                            <option value="4">Campeche</option>
-                                            <option value="5">Chiapas</option>
-                                            <option value="6">Chihuahua</option>
-                                            <option value="7">Coahuila</option>
-                                            <option value="8">Colima</option>
-                                            <option value="9">Ciudad de México / Distrito Federal</option>
-                                            <option value="10">Durango</option>
-                                            <option value="11">Estado de México</option>
-                                            <option value="12">Guanajuato</option>
-                                            <option value="13">Guerrero</option>
-                                            <option value="14">Hidalgo</option>
-                                            <option value="15">Jalisco</option>
-                                            <option value="16">Michoacán</option>
-                                            <option value="17">Morelos</option>
-                                            <option value="18">Nayarit</option>
-                                            <option value="19">Nuevo León</option>
-                                            <option value="20">Oaxaca</option>
-                                            <option value="21">Puebla</option>
-                                            <option value="22">Querétaro</option>
-                                            <option value="23">Quintana Roo</option>
-                                            <option value="24">San Luis Potosí</option>
-                                            <option value="25">Sinaloa</option>
-                                            <option value="26">Sonora</option>
-                                            <option value="27">Tabasco</option>
-                                            <option value="28">Tamaulipas</option>
-                                            <option value="29">Tlaxcala</option>
-                                            <option value="30">Veracruz</option>
-                                            <option value="31">Yucatán</option>
-                                            <option value="32">Zacatecas</option>
-                                        </select>
+                                        @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { multiple = true, @id = "Entidad", @class = "selectpicker", @data_style = "btn-default btn-outline", @data_title = "Entidad Federativa", @data_live_search = true, @data_actions_box = true })
                                     </div>
                                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                         <select multiple name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
